--- a/matchery_client/src/screens/List.css
+++ b/matchery_client/src/screens/List.css
@@ -25,3 +25,27 @@
   background: #fff;
   content: "";
 }
+
+/*
+<div className="candidateBox">
+  <div className="candidateBoxHeader">
+    <h2 className="candidateBoxTitle">WashU Acappella Auditions 2018 - Candidate</h2>
+  </div>
+  <div className="candidateBoxBody">
+    <div className="candidateSideBar">
+      <ul className="candidateSideBarList">
+        <li>Preferences</li>
+        <li>Results</li>
+      </ul>
+    </div>
+    <div className="candidateMainSection">
+      <div className="">
+        <h2 className="candidateMainSectionTitle">Ranking - drag to reaarange</h2>
+        <div className="draggableList">
+          <List colors={this.state.groups} />
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+*/
