--- a/matchery_client/src/screens/Main.css
+++ b/matchery_client/src/screens/Main.css
@@ -1,11 +1,3 @@
-.row {
-  width: 100%;
-}
-.centerRow {
-  width: 100%;
-  text-align: center;
-}
-
 .header {
   background-color: rgb(105,15,15);
   padding-top: 15px;
@@ -13,10 +5,6 @@
   padding-left: 12%;
   padding-right: 12%;
   color: white;
-}
-.headerTitle {
-  font-size: 1em;
-  margin: 0;
 }
 .headerButton {
   margin-top: -4px;
@@ -32,10 +20,14 @@
   -moz-transition: 0.15s;
   -o-transition: 0.15s;
   transition: 0.15s;
+  &:focus {
+    outline: 0;
+  }
+  &:hover {
+    opacity: 0.75;
+  }
 }
-.headerButton:focus {
-  outline: 0;
-}
-.headerButton:hover {
-  opacity: 0.75;
+.headerTitle {
+  font-size: 1em;
+  margin: 0;
 }
