--- a/matchery_client/src/screens/Main.css
+++ b/matchery_client/src/screens/Main.css
@@ -20,12 +20,12 @@
   -moz-transition: 0.15s;
   -o-transition: 0.15s;
   transition: 0.15s;
-  &:focus {
-    outline: 0;
-  }
-  &:hover {
-    opacity: 0.75;
-  }
+}
+.headerButton:focus {
+  outline: 0;
+}
+.headerButton:hover {
+  opacity: 0.75;
 }
 .headerTitle {
   font-size: 1em;
