--- a/matchery_client/src/screens/List.css
+++ b/matchery_client/src/screens/List.css
@@ -1,11 +1,13 @@
 .draggableList ul {
   list-style: none;
   margin:0;
+  margin-top: 10px;
   padding:0;
 }
 .draggableList li {
   margin-left: 30%;
-  padding: 10px 15px;
+  border: 3px solid white;
+  padding: 7px 15px;
   background:#eee;
 }
 .draggableList li::selection {
