--- a/matchery_client/src/screens/Candidate.css
+++ b/matchery_client/src/screens/Candidate.css
@@ -44,5 +44,8 @@
   margin: 0;
   padding-top: 10px;
   padding-left: 150px;
-  font-size: 20px;
+  font-size: 16px;
+}
+.candidateMainSectionTitleSpan {
+  font-weight: normal;
 }
