--- a/matchery_client/src/screens/Login.css
+++ b/matchery_client/src/screens/Login.css
@@ -18,7 +18,8 @@
     font-weight: 600;
     color: #222;
     text-decoration: none;
-    transition: background-color .15s; }
+    transition: background-color .15s;
+    cursor: pointer; }
   .login-panel__sign-up-link:hover {
     background-color: #c7c7c7; }
   .login-panel__sign-up-link:focus, .login-panel__sign-up-link:active {
