--- a/matchery_client/src/screens/Main.css
+++ b/matchery_client/src/screens/Main.css
@@ -45,13 +45,24 @@ body {
   font-weight: 400;
   color: #aaa; }
 
+.timestamp {
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: #aaa; }
+
 /*------------ utilities ------------*/
 
 .u-margin-bottom-sm {
   margin-bottom: 1rem !important; }
 
+.u-margin-bottom-sm-md {
+  margin-bottom: 1.5rem !important; }
+
 .u-margin-bottom-md {
   margin-bottom: 2rem !important; }
+
+.u-margin-bottom-md-lg {
+  margin-bottom: 2.5rem !important; }
 
 .u-margin-bottom-lg {
   margin-bottom: 3rem !important; }
@@ -83,18 +94,61 @@ body {
   transition: background-color .15s;
   cursor: pointer; }
 
-.btn:focus, .btn:active {
+.btn:focus .btn__left-icon, .btn:active .btn__left-icon {
   color: #e6e6e6; }
 
 .btn--disabled {
-  background-color: #aaa; }
-  .btn--disabled:hover {
-    background-color: #919191; }
+  background-color: #aaa;
+  cursor: default; }
+
+.btn--action {
+  background-color: #ea8839; }
+  .btn--action:hover {
+    background-color: #d96e17; }
+  .btn--action:focus, .btn--action:active {
+    color: #e6e6e6; }
 
 .btn--high-action {
   background-color: #309000; }
   .btn--high-action:hover {
     background-color: #1f5d00; }
+  .btn--high-action:focus, .btn--high-action:active {
+    color: #e6e6e6; }
+
+.btn--high-action-hollowed {
+  border: 0.2rem solid #309000;
+  background-color: transparent;
+  color: #309000; }
+  .btn--high-action-hollowed:hover {
+    background-color: lightgray; }
+  .btn--high-action-hollowed:focus, .btn--high-action-hollowed:active {
+    color: #1f5d00; }
+
+.btn--with-icon {
+  display: flex;
+  align-items: center; }
+
+.btn__left-icon {
+  margin-right: 1rem;
+  font-size: 2rem;
+  line-height: 1rem;
+  color: #fff; }
+
+.btn-back, .btn-back:link, .btn-back:visited {
+  border: none;
+  font-family: inherit;
+  font-size: 2rem;
+  color: #ea8839;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  cursor: pointer; }
+
+.btn-back:hover {
+  color: #d96e17; }
+
+.btn-back:focus, .btn-back:active {
+  color: #efa467; }
 
 .btn-create, .btn-create:link, .btn-create:visited {
   border: 0.2rem solid #ea8839;
@@ -183,11 +237,17 @@ body {
     font-size: 2rem;
     transform: translateY(0.5rem); }
 
+/*------------ back-button ------------*/
+
+.container-btn-back {
+  max-width: 100rem;
+  margin: 4rem auto; }
+
 /*------------ main panel ------------*/
 
   .main-panel {
   max-width: 100rem;
-  margin: 10rem auto;
+  margin: 4rem auto;
   background-color: #e0e0e0;
   box-shadow: 0 0.5rem 0.8rem #000; }
   .main-panel__header {
@@ -222,6 +282,27 @@ body {
     width: 100%;
     padding: 3rem 6rem; }
 
+/*------------ areas ------------*/
+
+.area-action {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center; }
+
+.area-section-heading {
+  display: flex;
+  align-items: center; }
+
+.area-section-heading-center {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+.area-search-bar-with-add {
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+
 /*------------ bar-group ------------*/
 
 .bar-group__bar {
@@ -252,36 +333,142 @@ body {
   .bar-group__icon--leftmost {
     margin-left: auto; }
 
-/*.header {
-  background-color: rgb(105,15,15);
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 12%;
-  padding-right: 12%;
-  color: white;
-}
-.headerButton {
-  margin-top: -4px;
-  float: right;
-  padding: 5px;
-  border-radius: 5px;
-  background-color: rgb(105,15,15);
-  border-color: rgb(232,136,67);
-  color: rgb(232,136,67);;
-  font-weight: bold;
-  opacity: 1;
-  -webkit-transition: 0.15s;
-  -moz-transition: 0.15s;
-  -o-transition: 0.15s;
-  transition: 0.15s;
-}
-.headerButton:focus {
-  outline: 0;
-}
-.headerButton:hover {
-  opacity: 0.75;
-}
-.headerTitle {
-  font-size: 1em;
-  margin: 0;
-}*/
+/*------------ bar-group-result ------------*/
+
+.bar-group-result {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  .bar-group-result__bar {
+    height: 5rem;
+    width: 44rem;
+    font-size: 1.4rem;
+    font-weight: 400;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    .bar-group-result__bar:not(:last-child) {
+      margin-bottom: .5rem; }
+    .bar-group-result__bar--success {
+      border: 0.2rem solid #309000;
+      color: #309000; }
+    .bar-group-result__bar--failure {
+      border: 0.2rem solid #8d0909;
+      color: #8d0909; }
+
+/*------------ search-bar ------------*/
+
+.search-bar {
+  height: 4rem;
+  width: 30rem;
+  padding-left: 1.5rem;
+  border: 0.2rem solid #aaa;
+  font-family: inherit;
+  font-size: 1.4rem;
+  font-weight: 400;
+  background-color: transparent;
+  display: flex;
+  align-items: center; }
+  .search-bar__form {
+    position: relative; }
+  .search-bar__icon, .search-bar__icon:link, .search-bar__icon:visited {
+    position: absolute;
+    top: 50%;
+    right: 1rem;
+    transform: translateY(-50%);
+    font-size: 2rem;
+    color: #aaa;
+    cursor: pointer; }
+  .search-bar__icon:hover {
+    color: #919191; }
+  .search-bar__icon:focus, .search-bar__icon:active {
+    color: #c4c4c4; }
+
+/*------------ modal ------------*/
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 70rem;
+  padding-left: 3.5rem;
+  padding-right: 3.5rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-color: #e0e0e0;
+  box-shadow: 0 0.5rem 0.8rem #000; }
+  .modal--sm {
+    padding-top: 3rem;
+    padding-bottom: 2.5rem; }
+  .modal__backdrop {
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    background-color: rgba(0, 0, 0, 0.8); }
+  .modal__close-icon {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-size: 2.5rem;
+    color: #aaa;
+    cursor: pointer; }
+    .modal__close-icon:hover {
+      color: #919191; }
+    .modal__close-icon:active {
+      color: #c4c4c4; }
+  .modal__form-group:not(:last-child) {
+    margin-bottom: 1.5rem; }
+  .modal__form-input {
+    width: 100%;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    padding-left: 1.5rem;
+    border: 0.2rem solid #999;
+    font-family: inherit;
+    font-size: 1.4rem;
+    font-weight: 400;
+    background-color: transparent; }
+    .modal__form-input--textarea {
+      height: 16rem; }
+  .modal__submit-area {
+    display: flex;
+    justify-content: flex-end; }
+  .modal__form-cancel, .modal__form-cancel:link, .modal__form-cancel:visited {
+    float: right;
+    width: 16rem;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+    border: 0.2rem solid #999;
+    background-color: transparent;
+    font-family: inherit;
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: #999;
+    transition: background-color .15s;
+    cursor: pointer; }
+  .modal__form-cancel:focus, .modal__form-cancel:active {
+    color: #b3b3b3; }
+  .modal__form-cancel:hover {
+    background-color: lightgray; }
+  .modal__form-submit, .modal__form-submit:link, .modal__form-submit:visited {
+    float: right;
+    width: 16rem;
+    border: none;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+    margin-left: 1rem;
+    background-color: #ea8839;
+    font-family: inherit;
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: #fff;
+    transition: background-color .15s;
+    cursor: pointer; }
+  .modal__form-submit:focus, .modal__form-submit:active {
+    color: #e6e6e6; }
+  .modal__form-submit:hover {
+    background-color: #d96e17; }
