--- a/matchery_client/src/screens/Dashboard.css
+++ b/matchery_client/src/screens/Dashboard.css
@@ -1,7 +1,7 @@
 /*------------ dashboard ------------*/
 
 .section-dashboard {
-  margin-top: 10rem;
+  margin-top: 4%;
   margin-left: auto;
   margin-right: auto;
   width: 116rem; }
