--- a/matchery_client/src/screens/Main.css
+++ b/matchery_client/src/screens/Main.css
@@ -12,7 +12,11 @@ html {
 
 body {
   box-sizing: border-box;
-  background-image: linear-gradient(to right, #8d0909, #ab2424); }
+  background-image: linear-gradient(to right, #8d0909, #ab2424);
+  -webkit-font-smoothing: antialiased;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+}
 
 /*------------ typography ------------*/
 
@@ -20,6 +24,38 @@ body {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
   color: #222; }
+
+  .load-wrapp {
+    float: left;
+    width: 100px;
+    height: 100px;
+    padding: 30px 20px 0px 20px;
+    border-radius: 50px;
+    text-align: center;
+    border: 1px solid #ea8839;
+    position:absolute; /*it can be fixed too*/
+        left:0; right:0;
+        top:0; bottom:0;
+        margin:auto;
+}
+
+.line {
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    border-radius: 15px;
+    background-color: #ea8839;
+}
+
+.load-1 .line:nth-last-child(1) {animation: loadingA 1.5s 1s infinite;}
+.load-1 .line:nth-last-child(2) {animation: loadingA 1.5s .5s infinite;}
+.load-1 .line:nth-last-child(3) {animation: loadingA 1.5s 0s infinite;}
+
+@keyframes loadingA {
+    0 {height: 15px;}
+    50% {height: 35px;}
+    100% {height: 15px;}
+}
 
 .heading-primary {
   font-size: 3rem;
